--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,8 +2,19 @@
   text-align: center;
 }
 
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
 .App-header {
-  background-color: #282c34;
+  background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -25,3 +36,47 @@
     transform: rotate(360deg);
   }
 }
+
+/* components */
+.art-selection-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.art-selection-image {
+  display: inline-block;
+  width: 150px;
+  height: 200px;
+  border: none;
+  border-radius: 10%;
+  margin: 15px;
+  position: relative;
+}
+
+.art-selection-image-selected {
+  border: 15px groove #FFFF00;
+}
+
+.art-selection-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5%;
+  filter: grayscale(100%);
+}
+
+.art-selection-image-selected img {
+  filter: none;
+}
+
+.image-prompt-container {
+  height: 300px;
+  overflow: hidden;
+}
+
+.image-prompt {
+  align-items: center;
+  max-width: 100%;
+  max-height: 100%;
+}
+
