--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -80,3 +80,16 @@
   max-height: 100%;
 }
 
+/* metmask button */
+.metamask-logo {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.metamask-button {
+  align-items: center; 
+  border-radius: 5px; 
+  padding: 5px 10px;
+}
