change bg & add floating img & css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,8 +14,10 @@
 }
 
 .App-header {
-  background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
-  min-height: 89vh;
+  /* background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db); */
+  background-image: url("components/bg-2.png");
+  background-size: cover;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -105,34 +107,89 @@
 }
 
 /* Navbar */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
+.grid-item {
+  margin-bottom: 20px;
+  width: 200px;
+  text-align: left;
 }
-
-.navbar-left {
-  display: flex;
-  align-items: center;
-}
-
 .logo {
-  width: 80px;
-  height: 80px;
+  width: 250px;
+  height: 250px;
   margin-right: 10px;
 }
 
 .logotext {
-  width: 180px;
-  height: 60px;
+  width: 300px;
+  height: 100px;
   margin-right: 10px;
 }
 
-.navbar-right {
+.container {
+  margin-top: 75px;
   display: flex;
 }
 
-.button {
-  margin-left: 10px;
+.left-column {
+  flex: 1;
+  align-self: flex-start;
+  min-width: 700px;
+  padding: 20px;
+}
+
+.right-column {
+  flex: 1;
+  min-width: 700px;
+  padding: 20px;
+}
+
+.grid-item {
+  margin-bottom: 20px;
+  min-width: 350px;
+}
+
+
+p {
+  font-size: 30px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  color: black;
+  margin-bottom: 10px;
+}
+
+button {
+  background-color: #000204;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+span {
+  height: 100px;
+}
+
+/* Floating Gallery */
+.floating-images-container {
+  position: relative;
+  height: 300px;
+}
+
+.floating-image {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  animation: floatingAnimation 2s infinite alternate;
+}
+
+@keyframes floatingAnimation {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
